# muautils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  build.sh  format.ps1  format.sh  vcpkg-configuration.json  vcpkg.json
cmake/: bc7enc.cmake  install-legal.cmake  muautilsConfig.cmake.in
legal/: NOTICE  SOURCE-OFFER.txt
legal/licenses/: openimageio.txt
ports/configures/: decoders_selected.txt  parsers_selected.txt
ports/ffmpeg/: portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
ports/ffmpeg/configures/: split.py
ports/openimageio/: portfile.cmake  vcpkg.json
scripts/: collect-licenses.ps1  patch-ffmpeg-port.ps1  patch-ffmpeg-port.sh  patch-openimage-port.ps1  patch-openimage-port.sh  sync-ffmpeg-port.sh
scripts/ffmpeg-port-overlay/: muautils-ffmpeg.patch
scripts/openimageio-port-overlay/: muautils-openimageio.patch
src/: lib.hpp  main.cpp
src/audio/: audio.cpp  audio.hpp  convert.cpp  convert.hpp  utils.hpp
src/audio/detail/: analyze.cpp  analyze.hpp  error.hpp  filter.cpp  filter.hpp  format.cpp  format.hpp  loudnorm.cpp  loudnorm.hpp  pipeline.cpp  pipeline.hpp  raii.hpp  target_format.hpp
src/cli/: app.cpp  app.hpp  cli.cpp  cli.hpp
src/image/: convert.cpp  image.cpp  image.hpp  utils.hpp
src/image/detail/: chunk.cpp  chunk.hpp  dds.cpp  dds.hpp  raster.cpp  raster.hpp  raster_decode.cpp  raster_inspect.cpp  raster_internal.hpp  raster_resize.cpp  vips.cpp  vips.hpp
tests/: asset.h.in  audio_test.cpp  common.hpp  image_test.cpp
